tests/fail/topLevelIfStatement.llcl
/*
error: if statements are only allowed in a function
8  |
9  |if (true) {
    ^^
10 |	
*/

if (true) {
	
}